css/theme.css
/*** Theme settings */
:root {
  --font-family: -apple-system, system-ui, sans-serif; /*'Space Grotesk', 'DM Sans', */
  /* Modular scale values (Major Third 1.25) */
  --scale0: 1.25;
  --scale1: 1.563;
  --scale2: 1.953;
  --scale3: 2.441;
  --scale4: 3.052;
  --scale5: 3.815;
  --scale6: 4.768;
  --scale7: 5.96;
  /* Colors */
  --c-black: #19121D;
  --c-white: #FFFDFB;
  --c-gradient1: #FEF5D3;
  --c-gradient2: #FFD0E0;
  --c-border1: #D5B9B2;

}

/*** Theme styles
******************/
html,
body {
  font-family: var(--font-family);
}
html {
  font-size: 1rem;
}
@media screen and (min-width: 320px) {
  html {
    font-size: calc(16px + 15.25 * ((100vw - 320px) / 1480));
  }
}
@media (min-width: 1800px) {
  html {
    font-size: 31.25px;
  }
}
body {
  color: var(--c-black); /* #D4FFFF; */
  line-height: var(--scale2);
  padding: 0 1rem; /* calc(var(--scale2) * 1rem) PREVIOUS TOP/BOTTOM */
}
@media (min-width: 600px) {
  body {
    padding: 0 calc(var(--scale2) * 1rem); /* calc(var(--scale3) * 1rem) */
  }
}
@media (min-width: 900px) {
  body {
    padding: 0 calc(var(--scale3) * 1rem); /* calc(var(--scale5) * 1rem) */
  }
}
body,
header {
  background-color: var(--c-white);
}
main {
  padding-top: 0;
}
/* Layout
************/
main .hero {
  display: flex;
  flex-direction: column;
  margin-bottom: calc(var(--scale7) * 1rem);
  padding-top: calc(var(--scale7) * 1rem);
}
@media (min-width: 900px) {
  main .hero {
    align-items: center;
    flex-direction: row;
  }
}
@media (min-width: 1200px) {
  main .hero {
    margin-bottom: calc(var(--scale5) * 1rem);
    padding-top: calc(var(--scale5) * 1rem);
  }
}
@media (min-width: 900px) {
  .hero__right {
    width: 50%;
  }
}
.hero-heading {
  flex-shrink: 0;
  margin-right: 1rem;
}
.usual-bottom {
  margin-bottom: calc(var(--scale7) * 1rem);
}
/* Image considerations
********/
.hero__right,
.car-garage {
  background-size: 100%;
  background-repeat: no-repeat;
}
.hero__right {
  aspect-ratio: 1;
  background-image: url(../img/squiggle-mask-01.svg);
  margin-left: -6%;
  width: 112%;
}
@media (min-width: 900px) {
  .hero__right {
    background-image: url(../img/squiggle-mask-01.svg);
    margin-left: 0;
    width: 100%;
  }
}
.car-garage {
  background-image: url(../img/squiggle-mask-02.svg);
}
@media (min-width: 900px) {
  .car-garage {
    max-width: 720px;
  }
}
.hero-img,
.img {
  height: auto;
  max-width: 100%;
}
.hero-img {
  margin-left: -1.25%;
}
.img {
  max-width: 100%;
  height: auto;
}
img.lazyload,
img.lazyloading {
  visibility: hidden;
}
img.lazyloaded {
  animation: loaded 400ms ease-in;
}

@keyframes loading {
  0% { opacity: 75%; }
  50% { opacity: 50%; }
  100% { opacity: 75%; }
}
@keyframes loaded {
  0% { opacity: 0%; }
  100% { opacity: 100%; }
}
.squiggle {
  max-width: 15rem;
}
.has-fancy-border {
  border: solid 0.25rem gold;
  padding: calc(var(--scale4) * 1rem);
  clip-path: polygon( 0% 29%, 10% 0, 85% 0%, 100% 20%, 100% 80%, 85% 100%, 10% 100%, 0% 80%, 0% 10% );
  mix-blend-mode: color-dodge;
}

/* Bottom header
****************/
header {
  /* background-color: #CC2C00; */
  border-top: solid 2px var(--c-border1);
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 1;
}
/* header:before {
  content: "";
  z-index: -1;
  position: absolute;
  border-top: solid 2px #3D2B3D;
  top: -4px;
  bottom: 0;
  left: 0;
  right: 0;
} */
@media (min-width: 900px) {
  header {
    border-bottom: solid 2px rgba(0,0,0,.25);
    border-top: 0;
    bottom: initial;
    /* left: 1rem; */
    top: 0;
    /* width: auto; */
  }
  /* header:before {
    top: 96px
  } */
}
.logo a[href],
.nav-item a[href] {
  /* color: #E3C567; */
}

/* Typography */
/* h1 {
  font-size: 4.236rem;
}
@media (min-width: 600px) {
  h1 {
    font-size: 6.854rem;
  }
}
@media (min-width: 1200px) {
  h1 {
    font-size: 11.089rem;
  }
} */
h1:not(.logo) {
  /* font-family: 'Space Grotesk', sans-serif; */
  font-size: calc(var(--scale3) * 1rem);
  /* text-shadow: .0625rem .125rem 0 rgba(0,0,0,.25); */
}
@media (min-width: 600px) {
  h1:not(.logo) {
    font-size: calc(var(--scale4) * 1rem);
  }
}
@media (min-width: 1200px) {
  h1:not(.logo) {
    font-size: calc(var(--scale5) * 1rem);;
  }
}
h2,
h3 {
  font-size: calc(var(--scale1) * 1rem);
}
@media (min-width: 600px) {
  h2,
  h3 {
    font-size: calc(var(--scale2) * 1rem);
  }
}
@media (min-width: 1200px) {
  h2,
  h3 {
    font-size: calc(var(--scale3) * 1rem);
  }
}
h4 {
  font-size: calc(var(--scale0) * 1rem);
}
h5 {
  font-size: calc(var(--scale0) * 1rem);
}
h6 {
  font-size: 1rem;
}
h1:not(.logo),
h2 {
  /* letter-spacing: -1.618px; */
  line-height: 1.25;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
}
hr {
  margin: 1rem 0;
}
a[href] {
  color: initial;
}
a[href]:visited {
  color: var(--black);
}
/* QUOTES
*************/
q {
  quotes: "“" "”" "‘" "’";
}
q::before {
  content: open-quote;
}
q::after {
  content: close-quote;
}
.quote {
  /* font-size: calc(var(--scale0) * 1rem); */
}
.quote__byline {
  font-style: italic;
}

